# Physical-AI-And-Humanoid-Robotics

./: .gitignore  Dockerfile  README.md  hort --date=relative  package-lock.json  package.json  style.md
backend/: README.md  auth.ts  main.py  pyproject.toml  requirements.txt  retrive.py
backend/agentss/: personalization.py  translation.py
backend/app/models/: schemas.py
backend/app/services/: db.py
backend/data/docs/module1/: README.md  chapter-10-real-project-controlling-humanoid-joint.md  chapter-5-sensors-as-sensory-organs.md  chapter-7-launch-files.md  chapter-8-urdf-visually-explained.md  chapter-9-tf2-simply-explained.md
backend/data/docs/module2/: chapter-1-what-a-digital-twin-means.md  chapter-2-gazebo-physics.md  chapter-3-unity-for-cinematic-visualization.md  chapter-6-sensors-in-simulation-vs-real-life.md  chapter-8-connecting-ros2-to-digital-twin.md  chapter-9-debugging-movement.md
backend/data/docs/module3/: _category_.json  chapter-1-what-real-perception-means.md  chapter-4-slam-with-room-navigation-analogies.md  chapter-6-manipulation.md  (+1 more)
backend/middleware/: jwt_middleware.py
backend/scripts/: ingest_to_qdrant.py  query_qdrant.py
backend/src/api/: ingest.py  query.py  sources.py
backend/src/services/: agent_orchestrator.py  embeddings.py  qdrant_client.py
backend/tests/: test_auth_integration.py  test_chat.py  test_personalization.py  test_translation.py
backend/tests/integration/: test_rag_query.py  test_selection_rag.py
backend/tests/unit/: test_embeddings.py  test_ingestion.py  test_qdrant_client.py  test_query_logic.py
(+141 files in other folders)
